--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
 .App {
-  text-align: center;
+    background-color: greenyellow;
+    width: 500px;
+    padding: 15px;
+    border-radius: 10px;
+    text-align: center;
+    margin: 50px auto
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, p {
+    margin: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+    background-color: white;
+    padding: 5px;
+    border-radius: 10px;
+    text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:hover {
+    background-color: rgb(206, 206, 206);
+    padding: 5px;
+    border-radius: 10px;
+    text-decoration: none;
 }
